
* libmalcontent-ui, and the malcontent-control application, now use
  libappstream rather than appstream-glib. (#51)

* libmalcontent-ui, and the malcontent-control application, now use GTK 4 and
  libadwaita rather than GTK+ 3. (!141)

* As a result of these changes, the pkg-config name has been bumped to
  libmalcontent-ui-1, and the gobject-introspection name to MalcontentUi-1.

* Translation updates:
 - Italian
 - Russian

Overview of changes in malcontent 0.10.5
========================================

* Bugs fixed:
 - !134 Update it.po
 - !135 Add German help translation
 - !136 Update pt_BR.po
 - !137 Update tr.po
 - !138 Update Chinese (Taiwan) translation file.

* Translation updates:
 - Chinese (Taiwan)
 - Italian
 - Portuguese (Brazil)
 - Turkish


Overview of changes in malcontent 0.10.4
========================================

* Bugs fixed:
 - !127 Update Catalan translation
 - !128 Update German proof-read translation from https://l10n.gnome.org/vertimus/malcontent/main/po/de/
 - !129 Update it.po
 - !132 Remove superfluous arguments to i18n.merge_file
 - !133 help: Add Italian help translation

* Translation updates:
 - Catalan
 - German
 - Italian


Overview of changes in malcontent 0.10.3
========================================

* Bugs fixed:
 - #44 Do not make malcontent-control user uninstallable using gui
 - !123 Add Czech translation
 - !124 Update Czech translation
 - !125 malcontent-control: Fix an unterminated option entry array
 - !126 malcontent-control: Focus controls rather than user selector

* Translation updates:
 - Czech


Overview of changes in malcontent 0.10.2
========================================

* Hide the launcher for malcontent-control from gnome-shell if using the GNOME
  desktop; find it via gnome-control-center instead (!119)

* Bugs fixed:
 - !118 ci: Limit depth of clone of subprojects
 - !119 malcontent-control: Hide application in GNOME
 - !121 ci: Rename master to main branch

* Translation updates: