@@ -44,6 +44,16 @@
   </kudos>
   <translation type="gettext">malcontent</translation>
   <releases>
+    <release version="0.11.0" date="2022-08-12" type="stable">
+      <description>
+        <p>This is a stable release with the following changes:</p>
+        <ul>
+          <li>Use libappstream instead of appstream-glib</li>
+          <li>Port to GTK4</li>
+          <li>Translation updates</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.10.5" date="2022-05-31" type="stable">
       <description>
         <p>This is a stable release with the following changes:</p>
